@@ -1,5 +1,8 @@
 1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+	* objectbase.h (MessageProbe), MessageProbe.[hm] ([MessageProbe
+	-longDynamicCallOn:]): Replaces intDynamicCallOn:
+
 	* MessageProbe.m ([MessageProbe -objectDynamicCallOn:]): Permit
 	objects to be selectors.
 
